[package]
name = "mac-process-info"
version = "0.2.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
keywords = ["getppid", "pid", "process-name", "process", "parent"]
description = "Returns basic process info on OS X"
homepage = "https://github.com/mitsuhiko/mac-process-info"
documentation = "https://docs.rs/mac-process-info/"
build = "build.rs"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2018"

[build-dependencies]
cc = "1.0.29"
